Modernize legacy Swing component APIs